# INF1761

./: CMakeLists.txt  INF1761.sln  INF1761.vcxproj  INF1761.vcxproj.filters  README.md
src/: Application.cpp  Application.h  Camera.h  Main.cpp  Material.h  PointLight.h  Ray.cpp  Ray.h  RenderingFrame.h  Scene.cpp  Scene.h  SceneSphere.h  SceneTriangle.h  Sphere.h  Triangle.h  Vector3.h
